# arr-score-exporter

./: .gitignore  LICENSE  README.md  USAGE-GUIDE.md  config.yaml.example  export_radarr_scores.py  export_sonarr_scores.py  project-structure.md  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  TROUBLESHOOTING.md  development_docs.md  project_structure.md
examples/: config_examples.md  example_radarr.csv  example_sonarr.csv
legacy/: export_radarr_scores.py  export_sonarr_scores.py
src/arr_score_exporter/: __init__.py  api_client.py  cli.py  config.py  enhanced_cli.py
src/arr_score_exporter/analysis/: __init__.py  analyzer.py
src/arr_score_exporter/exporters/: __init__.py  base.py  enhanced_base.py  enhanced_radarr.py  enhanced_sonarr.py  radarr.py  sonarr.py
src/arr_score_exporter/models/: __init__.py  database.py
src/arr_score_exporter/reporting/: __init__.py  chart_generators.py  html_builders.py  html_reporter.py
src/arr_score_exporter/reporting/assets/css/: report.css
src/arr_score_exporter/reporting/assets/js/: dashboard.js
src/arr_score_exporter/utils/: __init__.py  csv_writer.py
